# smart

./: README.md
Util/: AndroidManifest.xml
Util/res/layout/: activity_main.xml  detail.xml  fragment_main.xml  login.xml
Util/res/menu/: main.xml
Util/res/values/: strings.xml
Util/src/com/home/util/: DetailActivity.java  MainActivity.java
python/DHT11/DHT11_c/code/: CMakeLists.txt
python/DHT11/DHT11_c/code/config/: beaglebone_global_config.h  beaglebone_global_config.h.in
python/DHT11/DHT11_c/code/function/: bbb_dht_read.c
python/DHT11/DHT11_c/code/test/: test.c
python/led/: led_test  ledon.sh  pyled.py
python/led/led/: CMakeLists.txt
python/led/led/config/: ver.cmake
python/led/led/function/: led.c
python/led/led/include/: led.h
python/led/led/test/: test.c
python/pyServer/: pyClient.py  pyServerAuthenticate.py  pyserver.py
python/relay/: pyrelay.py  relay_test
python/relay/relay_c/: CMakeLists.txt
python/relay/relay_c/config/: toolchain-cross.cmake
python/relay/relay_c/function/: relay.c
python/relay/relay_c/include/: relay.h
python/relay/relay_c/test/: test.c
